<resources>
    <string name="app_name">SolarScoot</string>
    <string name="login">LOGIN</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register_caps">REGISTER</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="desbloquear">DESBLOQUEAR</string>
    <string name="refresh">REFRESH</string>
    <string name="projeto_grupo_3">Projeto Grupo 3</string>
    <string name="exemplo_percentagem">20</string>
    <string name="limite_de_uso">Limite de Uso</string>
    <string name="exemplo_carga">Cheio</string>
    <string name="estado_da_bateria">Estado da Bateria</string>
    <string name="exemplo_cacifo">4B</string>
    <string name="n_cacifo">Nº Cacifo</string>
    <string name="planos">Planos:</string>
    <string name="nome_teste">Daniel Morgado</string>
    <string name="numero_aluno_teste">202200716</string>
    <string name="editar_plano">Editar Plano</string>
    <string name="tempo_de_uso_semanal">TEMPO DE USO SEMANAL</string>
    <string name="text_red_alert">Você ultrapassou 20min do tempo de tolerancia</string>
    <string name="text_yellow_alert">Você chegou ao intervalo de tempo tolerancia</string>
    <string name="home">HOME</string>
    <string name="pagamentos">PAGAMENTOS</string>
    <string name="sobre">SOBRE</string>
    <string name="log_out">LOG OUT</string>
    <string name="perfil">PERFIL</string>
    <string name="mensalidades">MENSALIDADES:</string>
    <string name="descricao">DESCRIÇÃO</string>
    <string name="sobre_page">SOBRE:</string>
    <string name="sobre_texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis mauris congue, facilisis urna posuere, suscipit dolor. Vivamus varius turpis sed metus dapibus, et iaculis lorem suscipit. Morbi ornare suscipit vehicula. Morbi tincidunt accumsan magna, non vehicula dolor eleifend ac. Sed ultricies, </string>
    <string name="message">Message</string>
    <string name="referencia_multibanco">CRIAR REFERÊNCIA MULTIBANCO</string>
    <string name="referencia_mb">REFERÊNCIA MB:</string>
    <string name="entidade">ENTIDADE:</string>
    <string name="referencia">REFERÊNCIA:</string>
    <string name="valor">VALOR:</string>
    <string name="data_limite_de_pagamento">DATA LIMITE DE PAGAMENTO:</string>
    <string name="simbolo_percentagem">%</string>
    <string name="plano_1">Plano 1: Aluguer do Cacifo (1.50€/h)</string>
    <string name="plano_2">Plano 2: Pacote Básico (2.50€/h)</string>
    <string name="plano_3">Plano 3: Pacote Premium (13€/semana)</string>
    <string name="plano_4">Plano 4: Pacote Mensal (45€/mês)</string>
    <string name="plan1">Cacifo sem carregamento pago por hora</string>
    <string name="plan2">Cacifo com carregamento pago por hora</string>
    <string name="plan3">Cacifo com carregamento ilimitado pago á semana</string>
    <string name="plan4">Cacifo com carregamento ilimitado pago mensalmente</string>
    <string name="entidademb">10355</string>
    <string name="valor_a_pagar">VALOR A PAGAR</string>
    <string name="data">DATA</string>
    <string name="selecionar">Selecionar</string>
    <string name="estado">Estado</string>
    <string name="valor_tabela">Valor</string>
    <string name="valor1">20€</string>
    <string name="valor2">10€</string>
    <string name="valor3">7€</string>
    <string name="guardar">GUARDAR</string>
</resources>